--- a/templates/admin_panel/base.html
+++ b/templates/admin_panel/base.html
@@ -104,8 +104,25 @@
                         <a href="{% url 'admin_panel:category-offers'  %}">Category Offers</a>
                     </div>
                 </li>
-
-
+                <!-- <li class="menu-item has-submenu">
+                    <a class="menu-link" href="#"> <i class="icon material-icons md-person"></i>
+                        <span class="text">Banner</span>
+                    </a>
+                    <div class="submenu">
+                        <a href="{% url 'admin_panel:admin_banner'%}">banner</a>
+                        
+                    </div>
+                </li> -->
+                <li class="menu-item has-submenu">
+                    <a class="menu-link" href="page-sellers-cards.html"> <i class="icon material-icons md-store"></i>
+                        <span class="text">Banner</span>
+                    </a>
+                    <div class="submenu">
+                       
+                        <a href="{% url 'admin_panel:admin_banner'%}">banner</a>
+                      
+                    </div>
+                </li>
                 <li class="menu-item has-submenu">
                     <a class="menu-link" href="page-sellers-cards.html"> <i class="icon material-icons md-store"></i>
                         <span class="text">Orders</span>
