--- a/templates/app1/payment.html
+++ b/templates/app1/payment.html
@@ -36,7 +36,7 @@
                 <dl class="dlist-align">
                   {%if coupon_discount %}
                   <dt>coupon discount:</dt>
-                  <dd class="text-right text-dark b"><strong>₹{{ coupon_discount}}</strong></dd>
+                  <dd class="text-right text-dark b"><strong>-₹{{ coupon_discount}}</strong></dd>
                 </dl>
                 {% endif %}
                 <dl class="dlist-align">
