--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -215,8 +215,8 @@
                     </div>
                     <div class="header-right">
                         <div class="search-style-2">
-                            <form action="#">
-                                <select class="select-active">
+                            <form action="/search">
+                                <!-- <select class="select-active">
                                     <option>All Categories</option>
                                     <option>Women's</option>
                                     <option>Men's</option>
@@ -228,57 +228,59 @@
                                     <option>Luggage</option>
                                     <option>Shoes</option>
                                     <option>Mother & Kids</option>
-                                </select>
-                                <input type="text" placeholder="Search for items...">
+                                </select> -->
+                                <input type="text" name="q" placeholder="Search for items...">
                             </form>
                         </div>
                         <div class="header-action-right">
                             <div class="header-action-2">
                                 <div class="header-action-icon-2">
-                                    <a href="shop-wishlist.html">
+                                    <a href="{% url 'app1:wishlist' %} ">
                                         <img class="svgInject" alt="Evara" src="{% static 'assets/imgs/theme/icons/icon-heart.svg'%}">
-                                        <span class="pro-count blue">4</span>
+                                        <span class="pro-count blue">1</span>
                                     </a>
                                 </div>
                                 <div class="header-action-icon-2">
-                                    <a class="mini-cart-icon" href="shop-cart.html">
+                                    <a class="mini-cart-icon" href="{% url 'app1:shopping_cart'  %}">
                                         <img alt="Evara" src="{% static 'assets/imgs/theme/icons/icon-cart.svg'%}">
-                                        <span class="pro-count blue">2</span>
+                                        
                                     </a>
                                     <div class="cart-dropdown-wrap cart-dropdown-hm2">
+                                        {%  for product_id,item in cart_data.items %}
                                         <ul>
                                             <li>
                                                 <div class="shopping-cart-img">
-                                                    <a href="shop-product-right.html"><img alt="Evara" src="{% static '{%static ' %}'assets/imgs/shop/thumbnail-3.jpg'%}"></a>
+                                                    <a href="shop-product-right.html"><img alt="Evara" src="{{item.image}}"></a>
                                                 </div>
                                                 <div class="shopping-cart-title">
-                                                    <h4><a href="shop-product-right.html">Daisy Casual Bag</a></h4>
-                                                    <h4><span>1 × </span>$800.00</h4>
+                                                    <h4><a href="shop-product-right.html">{{item.title}}</a></h4>
+                                                    <h4><span>1 × </span>{{item.price}}</h4>
                                                 </div>
-                                                <div class="shopping-cart-delete">
+                                                <!-- <div class="shopping-cart-delete">
                                                     <a href="#"><i class="fi-rs-cross-small"></i></a>
-                                                </div>
+                                                </div> -->
                                             </li>
                                             <li>
-                                                <div class="shopping-cart-img">
+                                                <!-- <div class="shopping-cart-img">
                                                     <a href="shop-product-right.html"><img alt="Evara" src="{% static '{%static ' %}'assets/imgs/shop/thumbnail-2.jpg'%}"></a>
-                                                </div>
-                                                <div class="shopping-cart-title">
+                                                </div> -->
+                                                <!-- <div class="shopping-cart-title">
                                                     <h4><a href="shop-product-right.html">Corduroy Shirts</a></h4>
                                                     <h4><span>1 × </span>$3200.00</h4>
                                                 </div>
                                                 <div class="shopping-cart-delete">
                                                     <a href="#"><i class="fi-rs-cross-small"></i></a>
-                                                </div>
+                                                </div> -->
                                             </li>
                                         </ul>
+                                        {% endfor %}
                                         <div class="shopping-cart-footer">
-                                            <div class="shopping-cart-total">
+                                            <!-- <div class="shopping-cart-total">
                                                 <h4>Total <span>$4000.00</span></h4>
-                                            </div>
+                                            </div> -->
                                             <div class="shopping-cart-button">
-                                                <a href="shop-cart.html" class="outline">View cart</a>
-                                                <a href="shop-checkout.html">Checkout</a>
+                                                <a href="{% url 'app1:shopping_cart'  %}" class="outline">View cart</a>
+                                                <a href="{% url 'app1:checkout' %}">Checkout</a>
                                             </div>
                                         </div>
                                     </div>
@@ -598,49 +600,22 @@
                     <div class="header-action-right d-block d-lg-none">
                         <div class="header-action-2">
                             <div class="header-action-icon-2">
-                                <a href="shop-wishlist.html">
+                                <a href="{% url 'app1:wishlist' %}">
                                     <img alt="Evara" src="{% static 'assets/imgs/theme/icons/icon-heart.svg' %}">
                                     <span class="pro-count white">4</span>
                                 </a>
                             </div>
                             <div class="header-action-icon-2">
-                                <a class="mini-cart-icon" href="shop-cart.html">
+                                <a class="mini-cart-icon" href="{% url 'app1:shopping_cart' %}">
                                     <img alt="Evara" src="{% static 'assets/imgs/theme/icons/icon-cart.svg' %}">
-                                    <span class="pro-count white">2</span>
+                                    <span class="pro-count white">{{request.session.cart_data_obj|length}}</span>
                                 </a>
                                 <div class="cart-dropdown-wrap cart-dropdown-hm2">
-                                    <ul>
-                                        <li>
-                                            <div class="shopping-cart-img">
-                                                <a href="shop-product-right.html"><img alt="Evara" src="{% static 'assets/imgs/shop/thumbnail-3.jpg' %}"></a>
-                                            </div>
-                                            <div class="shopping-cart-title">
-                                                <h4><a href="shop-product-right.html">Plain Striola Shirts</a></h4>
-                                                <h3><span>1 × </span>$800.00</h3>
-                                            </div>
-                                            <div class="shopping-cart-delete">
-                                                <a href="#"><i class="fi-rs-cross-small"></i></a>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="shopping-cart-img">
-                                                <a href="shop-product-right.html"><img alt="Evara" src="{% static 'assets/imgs/shop/thumbnail-4.jpg' %}"></a>
-                                            </div>
-                                            <div class="shopping-cart-title">
-                                                <h4><a href="shop-product-right.html">Macbook Pro 2022</a></h4>
-                                                <h3><span>1 × </span>$3500.00</h3>
-                                            </div>
-                                            <div class="shopping-cart-delete">
-                                                <a href="#"><i class="fi-rs-cross-small"></i></a>
-                                            </div>
-                                        </li>
-                                    </ul>
+                                   
                                     <div class="shopping-cart-footer">
-                                        <div class="shopping-cart-total">
-                                            <h4>Total <span>$383.00</span></h4>
-                                        </div>
+                                        
                                         <div class="shopping-cart-button">
-                                            <a href="shop-cart.html">View cart</a>
+                                            <a href="{% url 'app1:shopping_cart'  %}">View cart</a>
                                             <a href="shop-checkout.html">Checkout</a>
                                         </div>
                                     </div>
@@ -674,8 +649,8 @@
             </div>
             <div class="mobile-header-content-area">
                 <div class="mobile-search search-style-3 mobile-header-border">
-                    <form action="#">
-                        <input type="text" placeholder="Search for items…">
+                    <form action="/search">
+                        <input type="text" name="q"  placeholder="Search for items…">
                         <button type="submit"><i class="fi-rs-search"></i></button>
                     </form>
                 </div>
