--- a/templates/admin_panel/dashboard.html
+++ b/templates/admin_panel/dashboard.html
@@ -21,7 +21,8 @@
                     <span class="icon icon-sm rounded-circle bg-primary-light"><i class="text-primary material-icons md-monetization_on"></i></span>
                     <div class="text">
                         <h6 class="mb-1 card-title">Revenue</h6>
-                        <span>$0</span>
+                        <span>₹ {{revenue}}</span>
+                        <!-- <span>₹ 48,325</span> -->
                         <span class="text-sm">
                             Shipping fees are not included
                         </span>
@@ -34,7 +35,7 @@
                 <article class="icontext">
                     <span class="icon icon-sm rounded-circle bg-success-light"><i class="text-success material-icons md-local_shipping"></i></span>
                     <div class="text">
-                        <h6 class="mb-1 card-title">Orders</h6> <span>0</span>
+                        <h6 class="mb-1 card-title">Orders</h6> <span>{{ user_order }}</span>
                         <span class="text-sm">
                             Excluding orders in transit
                         </span>
@@ -60,9 +61,9 @@
                 <article class="icontext">
                     <span class="icon icon-sm rounded-circle bg-info-light"><i class="text-info material-icons md-shopping_basket"></i></span>
                     <div class="text">
-                        <h6 class="mb-1 card-title">Monthly Earning</h6> <span>$0</span>
+                        <h6 class="mb-1 card-title">Total Users</h6> <span>{{total_users_count}}</span>
                         <span class="text-sm">
-                            Based in your local time.
+                            Based in your logged accounts
                         </span>
                     </div>
                 </article>
@@ -246,39 +247,7 @@
     <div class="card mb-4">
         <header class="card-header">
             <h4 class="card-title">Latest orders</h4>
-            <div class="row align-items-center">
-                <div class="col-md-3 col-12 me-auto mb-md-0 mb-3">
-                    <div class="custom_select">
-                        <select class="form-select select-nice">
-                            <option selected>All Categories</option>
-                            <option>Women's Clothing</option>
-                            <option>Men's Clothing</option>
-                            <option>Cellphones</option>
-                            <option>Computer & Office</option>
-                            <option>Consumer Electronics</option>
-                            <option>Jewelry & Accessories</option>
-                            <option>Home & Garden</option>
-                            <option>Luggage & Bags</option>
-                            <option>Shoes</option>
-                            <option>Mother & Kids</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-md-2 col-6">
-                    <input type="date" value="02.05.2021" class="form-control">
-                </div>
-                <div class="col-md-2 col-6">
-                    <div class="custom_select">
-                        <select class="form-select select-nice">
-                            <option selected>Status</option>
-                            <option>All</option>
-                            <option>Paid</option>
-                            <option>Chargeback</option>
-                            <option>Refund</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
+            
         </header>
         <div class="card-body">
             <div class="table-responsive">
@@ -294,14 +263,15 @@
                                 </th>
                                 <th class="align-middle" scope="col">Order ID</th>
                                 <th class="align-middle" scope="col">Billing Name</th>
-                                <th class="align-middle" scope="col">Date</th>
+                                <th class="align-middle" scope="col">Email</th>
                                 <th class="align-middle" scope="col">Total</th>
-                                <th class="align-middle" scope="col">Payment Status</th>
+                                <th class="align-middle" scope="col">Order Status</th>
                                 <th class="align-middle" scope="col">Payment Method</th>
-                                <th class="align-middle" scope="col">View Details</th>
+                                
                             </tr>
                         </thead>
-                        <!-- <tbody>
+                        <tbody>
+                            {% for order in last_orders %}
                             <tr>
                                 <td class="text-center">
                                     <div class="form-check">
@@ -309,25 +279,26 @@
                                         <label class="form-check-label" for="transactionCheck02"></label>
                                     </div>
                                 </td>
-                                <td><a href="#" class="fw-bold">#SK2540</a> </td>
-                                <td>Neal Matthews</td>
+                                <td>{{ order.order_number }} </td>
+                                <td>{{ order.user.username }}</td>
                                 <td>
-                                    07 Oct, 2021
+                                    {{ order.user.email }}
                                 </td>
                                 <td>
-                                    $400
+                                    {{ order.order_total}}
                                 </td>
                                 <td>
-                                    <span class="badge badge-pill badge-soft-success">Paid</span>
+                                    <span class="badge badge-pill badge-soft-success">{{ order.status }}</span>
                                 </td>
                                 <td>
-                                    <i class="material-icons md-payment font-xxl text-muted mr-5"></i> Mastercard
+                                    <i class="material-icons md-payment font-xxl text-muted mr-5"></i> {{ order.payment.payment_method }}
                                 </td>
                                 <td>
-                                    <a href="#" class="btn btn-xs"> View details</a>
+                                    <!-- <a href="#" class="btn btn-xs"> View details</a> -->
                                 </td>
                             </tr>
-                            <tr>
+                            {% endfor %}
+                            <!-- <tr>
                                 <td class="text-center">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" id="transactionCheck03">
@@ -451,24 +422,15 @@
                                 <td>
                                     <a href="#" class="btn btn-xs"> View details</a>
                                 </td>
-                            </tr>
-                        </tbody> -->
+                            </tr> -->
+                        </tbody>
                     </table>
                 </div>
             </div> <!-- table-responsive end// -->
         </div>
     </div>
     <div class="pagination-area mt-30 mb-50">
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-start">
-                <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                <li class="page-item"><a class="page-link" href="#">02</a></li>
-                <li class="page-item"><a class="page-link" href="#">03</a></li>
-                <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                <li class="page-item"><a class="page-link" href="#">16</a></li>
-                <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li>
-            </ul>
-        </nav>
+        
     </div>
 </section>
 {% endblock %}
