--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -211,7 +211,8 @@
             <div class="container">
                 <div class="header-wrap">
                     <div class="logo logo-width-1">
-                        <a href="index.html"><img src="" alt="Groove Head"></a>
+                        <a href="index.html"><img src="{% static 'assets/imgs/theme/Logo11.png' %}" alt="Groove Head">
+                        </a>
                     </div>
                     <div class="header-right">
                         <div class="search-style-2">
@@ -842,17 +843,17 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="widget-about font-md mb-md-5 mb-lg-0">
                         <div class="logo logo-width-1 wow fadeIn animated">
-                            <a href="index.html"><img src="" alt="Groove Head"></a>
+                            <a href="index.html"><img src="{% static 'assets/imgs/theme/Logo11.png' %}" alt="Groove Head"></a>
                         </div>
                         <h5 class="mt-20 mb-10 fw-600 text-grey-4 wow fadeIn animated">Contact</h5>
                         <p class="wow fadeIn animated">
-                            <strong>Address: </strong>562 Wellington Road, Street 32, San Francisco
+                            <strong>Address: </strong>562 Panambilli Nagar Road, Street 32, Kochi
                         </p>
                         <p class="wow fadeIn animated">
                             <strong>Phone: </strong>+01 2222 365 /(+91) 01 2345 6789
                         </p>
                         <p class="wow fadeIn animated">
-                            <strong>Hours: </strong>10:00 - 18:00, Mon - Sat
+                            <!-- <strong>Hours: </strong>10:00 - 18:00, Mon - Sat -->
                         </p>
                         <h5 class="mb-10 mt-30 fw-600 text-grey-4 wow fadeIn animated">Follow Us</h5>
                         <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0">
